cleanup: get rid of LinkedList; hide implementation details
GitOrigin-RevId: 0fce09c1eb5e86c5adda97fb23eec77d78f77da4